org.knime.js.base/js-src/org/knime/js/base/util/table/view/styles.css
table.knimeTableView {
	margin: 10px auto;
}

table.knimeTableView,
table.knimeTableView .knimeTableCell {
	border: 1px solid gray;
	border-spacing: 0px;
	border-collapse: collapse;
}

table.knimeTableView .knimeTableCell {
	padding: 0 3px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	color: #2C2C2C;
	text-align: left;
	vertical-align: middle;
}

table.knimeTableView .knimeTableHeaderCell {
	background-color: #C2C2C2;
	font-weight: bold;
}

table.knimeTableView .knimeTableRowKeyHeaderCell {
	text-align: center;
}

table.knimeTableView .knimeTableRowKeyCell {
	background-color: #E5E5E5;
	font-style: italic;
	padding-left: 0;
}

table.knimeTableView .knimeTableRowColor {
	float: left;
	margin-right: 3px;
}

table.knimeTableView .knimeTableRowKeyText {
	float: left;
}

table.knimeTableView .knimeTableRowKeyText:after {
	clear: both;
}

